# stm32h743-lcd-touch

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: arm-none-eabi-gcc.cmake
docs/: BOARD_REFERENCE.md  PORTING.md
include/: clock.h  flash_image.h  gpio_af.h  i2c.h  lcd.h  qspi.h  sd.h  sdram.h  stm32h743_reg.h  touch.h  uart.h
linker/: STM32H743IITX_FLASH.ld
src/: clock.c  fatfs_diskio.c  flash_image.c  i2c.c  lcd.c  main.c  qspi.c  sd.c  sdram.c  startup_stm32h743.c  syscalls.c  touch.c  uart.c
test/: clock_report.c  fatfs_report.c  qspi_report.c  qspi_selftest.c  sd_report.c  sd_selftest.c
tools/: package-drivers.ps1
